--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="main">You've been on this page for 0 seconds</div>
-    <div class="logo"></div>
+    <!-- <div class="logo"></div> -->
   </body>
 </html>
 
